# mixtape

./: .gitignore  LICENSE  README.md  index.html  install.ps1  install.sh  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: release.yml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-download-engine/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-core-ux/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-HUMAN-UAT.md  02-RESEARCH.md  02-UI-SPEC.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: download-sidecars-ci.sh  download-sidecars.sh
scripts/distribution/: mixtape.json  mixtape.rb
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json  tauri.nopreinstall.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cookies.rs  deps.rs  download.rs  errors.rs  lib.rs  main.rs  preview.rs  queue.rs  search.rs  state.rs  title.rs  updater.rs
src/components/: DownloadForm.tsx  ErrorBanner.tsx  FolderPicker.tsx  HelpModal.tsx  HistoryTab.tsx  PlayerBar.tsx  PlaylistTrackRow.tsx  ProgressBar.tsx  QueueItem.tsx  QueueTab.tsx  SearchResultRow.tsx  SearchTab.tsx  SettingsTab.tsx  SetupScreen.tsx  TabBar.tsx  UpdateButton.tsx
src/hooks/: useAutoUpdate.ts
src/styles/: global.css  theme.css
(+36 files in other folders)
